new file change

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ JWT_SECRET="asdfay4634yhesg[pyiKjagpjye]gjga04096qj#ye_)jagerypipjad'gkPjjPup0et
 
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cHJvdmVuLXN3aW5lLTE0LmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_W110kiN01fv8ZqsaK2yy64M5lCvyJjjIaH1fHyzP9V
+
+WEBHOOK_SECRET=whsec_N2V3ceXk4niwedBmAgYPlZZHisWKbUBP
