--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.3",
     "framer-motion": "^11.2.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "svix": "^1.24.0",
     "zod": "^3.23.8"
   },
