Good amount of changes

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
+# Mongo Db
 MONGODB_URI="mongodb+srv://Ravi-Singh:ravi1234@users.uivekqd.mongodb.net/"
 
-JWT_SECRET="asdfay4634yhesg[pyiKjagpjye]gjga04096qj#ye_)jagerypipjad'gkPjjPup0et-43"
+# Json Web Token
+JWT_SECRET="7*WDpU,/N0WgQ!?uC$XRB=-{aT@}F!X.Xr53)Mx3mcWfFUPtw%Et.#KC*EL3[MF;"
 
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cHJvdmVuLXN3aW5lLTE0LmNsZXJrLmFjY291bnRzLmRldiQ
-CLERK_SECRET_KEY=sk_test_W110kiN01fv8ZqsaK2yy64M5lCvyJjjIaH1fHyzP9V
-
-WEBHOOK_SECRET=whsec_N2V3ceXk4niwedBmAgYPlZZHisWKbUBP
+# Next Auth
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET="Hz,$EV,2Fb;=aSy%b0uwXZX@iwjuFWBk0xh?z5&C,dJwK]5{{VErucbEP}ay%cM+"
