--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "svix": "^1.24.0",
+    "swr": "^2.2.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
