--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.0",
+    "@internationalized/date": "^3.5.4",
     "@nextui-org/react": "^2.3.6",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
@@ -22,6 +23,7 @@
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "primereact": "^10.6.6",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
