auth system done

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Mongo Db
-MONGODB_URI="mongodb+srv://Ravi-Singh:ravi1234@users.uivekqd.mongodb.net/"
+MONGODB_URI=mongodb+srv://ravi-singh:ravisingh@cluster0.y7o2dgu.mongodb.net/
 
 # Json Web Token
 JWT_SECRET="7*WDpU,/N0WgQ!?uC$XRB=-{aT@}F!X.Xr53)Mx3mcWfFUPtw%Et.#KC*EL3[MF;"
